codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_begin_restores_working_status.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• 处理中 (0s • esc 中断) · 1 个后台终端运行中 · /ps 查看 · /stop 关闭           " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (20, " "), (22, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " "), (44, " "), (53, " "), (55, " "), (66, " "), (68, " ")]
"  .--------------------------------.                                            "
"  | 礼貌地从底栏飘上来。                     |                                  " Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " ")]
"  '--------------------------------.                                            "
"    \                                                                           "
"   .---.                                                                        "
"  ( ^ ^ )                                                                       "
"  / ~~~ \\                                                                      "
"  Echo ★ 常见 幽灵 · 可见 · 坐立不安                                            " Hidden by multi-width symbols: [(10, " "), (12, " "), (15, " "), (17, " "), (22, " "), (24, " "), (29, " "), (31, " "), (33, " "), (35, " ")]
"  峰值 耐心 74 · 无 · 困倦眼 · 孵化中 · 抚摸 0                                  " Hidden by multi-width symbols: [(3, " "), (5, " "), (8, " "), (10, " "), (18, " "), (23, " "), (25, " "), (27, " "), (32, " "), (34, " "), (36, " "), (41, " "), (43, " ")]
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  gpt-5.3-codex default · 100% left · /tmp/project                              "
